--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -152,10 +152,10 @@
    ],
    "source": [
     "image_dir = './images/'\n",
-    "save_dir = './tmp/'\n",
+    "tmp_dir = './tmp/'\n",
     "\n",
     "image_dir = os.path.join(image_dir, dataset_name)\n",
-    "save_dir = os.path.join(save_dir, dataset_name)\n",
+    "tmp_dir = os.path.join(tmp_dir, dataset_name)\n",
     "\n",
     "\n",
     "if not os.path.exists(save_dir):\n",
@@ -184,8 +184,32 @@
     "    if crop_type == \"resize\":\n",
     "        image = resize(image, resolution)\n",
     "        \n",
-    "    save_path = os.path.join(save_dir, filename)\n",
-    "    image.save(save_path)"
+    "    tmp_path = os.path.join(tmp_dir, filename)\n",
+    "    image.save(tmp_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "531\n",
+      "Running the model inference: 100%|████████████████| 9/9 [00:08<00:00,  1.01it/s]\n",
+      "3\n",
+      "12\n",
+      "19\n",
+      "3\n",
+      "4\n",
+      "Building the T-SNE plot: 100%|████████████████| 531/531 [00:05<00:00, 96.55it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python tsne.py --path={tmp_dir}"
    ]
   },
   {
