--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,26 +190,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "531\n",
-      "Running the model inference: 100%|████████████████| 9/9 [00:08<00:00,  1.01it/s]\n",
-      "3\n",
-      "12\n",
-      "19\n",
-      "3\n",
-      "4\n",
-      "Building the T-SNE plot: 100%|████████████████| 531/531 [00:05<00:00, 96.55it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!python tsne.py --path={tmp_dir}"
+    "if use_tsne:\n",
+    "    !python tsne.py --path={tmp_dir}"
    ]
   },
   {
