--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -72,11 +72,11 @@
       "Requirement already satisfied: six in /usr/local/lib/python3.7/site-packages (from torchvision==0.5.0->-r requirements.txt (line 9)) (1.15.0)\n",
       "Requirement already satisfied: pandas in /usr/local/lib/python3.7/site-packages (from gap-stat>=2->-r requirements.txt (line 10)) (1.1.0)\n",
       "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/site-packages (from matplotlib>=3.2.0->-r requirements.txt (line 3)) (1.3.1)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in /usr/local/lib/python3.7/site-packages (from matplotlib>=3.2.0->-r requirements.txt (line 3)) (2.4.7)\n",
       "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/site-packages (from matplotlib>=3.2.0->-r requirements.txt (line 3)) (0.10.0)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.7/site-packages (from matplotlib>=3.2.0->-r requirements.txt (line 3)) (2.8.1)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /usr/local/lib/python3.7/site-packages (from matplotlib>=3.2.0->-r requirements.txt (line 3)) (2.4.7)\n",
       "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/site-packages (from pandas->gap-stat>=2->-r requirements.txt (line 10)) (2021.1)\n",
-      "\u001b[33mWARNING: You are using pip version 21.0.1; however, version 21.2.1 is available.\n",
+      "\u001b[33mWARNING: You are using pip version 21.0.1; however, version 21.2.2 is available.\n",
       "You should consider upgrading via the '/usr/local/bin/python3.7 -m pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -158,14 +158,14 @@
     "tmp_dir = os.path.join(tmp_dir, dataset_name)\n",
     "\n",
     "\n",
-    "if not os.path.exists(save_dir):\n",
-    "    os.makedirs(save_dir)\n",
+    "if not os.path.exists(tmp_dir):\n",
+    "    os.makedirs(tmp_dir)\n",
     "else:\n",
     "    try:\n",
-    "        shutil.rmtree(save_dir)\n",
+    "        shutil.rmtree(tmp_dir)\n",
     "    except OSError as e:\n",
     "        print(\"Error: %s : %s\" % (dir_path, e.strerror))\n",
-    "    os.makedirs(save_dir)\n",
+    "    os.makedirs(tmp_dir)\n",
     "    \n",
     "\n",
     "for filename in os.listdir(image_dir):\n",
@@ -190,13 +190,247 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "529\n",
+      "Running the model inference: 100%|████████████████| 9/9 [00:08<00:00,  1.03it/s]\n",
+      "3\n",
+      "12\n",
+      "12\n",
+      "3\n",
+      "13\n",
+      "Building the T-SNE plot: 100%|████████████████| 529/529 [00:05<00:00, 97.01it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "if use_tsne:\n",
+    "    !python tsne.py --path={tmp_dir}\n",
+    "else:\n",
+    "    print('TSNE is not in use')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If TSNE is enabled when it is finished running check the Clusters folder and choose the cluster you want to use below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a cluster you want to use or Enter to continue:  1\n",
+      "Enter a cluster you want to use or Enter to continue:  2\n",
+      "Enter a cluster you want to use or Enter to continue:  3\n",
+      "Enter a cluster you want to use or Enter to continue:  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "if use_tsne:\n",
+    "    clusters = []\n",
+    "    while True:\n",
+    "        x = input(\"Enter a cluster you want to use or Enter to continue: \")\n",
+    "        if x == '':\n",
+    "            break\n",
+    "        clusters.append(int(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "if use_tsne:\n",
-    "    !python tsne.py --path={tmp_dir}"
+    "    save_dir = os.path.join(\"./tmp\", str(dataset_name + \"_clusters\"))\n",
+    "    \n",
+    "    if not os.path.exists(save_dir):\n",
+    "        os.makedirs(save_dir)\n",
+    "    else:\n",
+    "        try:\n",
+    "            shutil.rmtree(save_dir)\n",
+    "        except OSError as e:\n",
+    "            print(\"Error: %s : %s\" % (save_dir, e.strerror))\n",
+    "        os.makedirs(save_dir)\n",
+    "                            \n",
+    "    for c in clusters:\n",
+    "        cluster_dir = os.path.join(\"./clusters\", dataset_name, str(\"cluster_\" + str(c)))\n",
+    "        \n",
+    "        for filename in os.listdir(cluster_dir):\n",
+    "            file = os.path.join(cluster_dir, filename)\n",
+    "            new_file = os.path.join(save_dir, filename)\n",
+    "            shutil.move(file, new_file)\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /usr/local/lib/python3.7/site-packages/tensorflow_core/__init__.py:1473: The name tf.estimator.inputs is deprecated. Please use tf.compat.v1.estimator.inputs instead.\n",
+      "\n",
+      "Loading images from \"./tmp/mona-lisa_clusters\"\n",
+      "Creating dataset \"./datasets/mona-lisa\"\n",
+      "Added 114 images.                       \n",
+      "WARNING:tensorflow:From /usr/local/lib/python3.7/site-packages/tensorflow_core/__init__.py:1473: The name tf.estimator.inputs is deprecated. Please use tf.compat.v1.estimator.inputs instead.\n",
+      "\n",
+      "\n",
+      "Training options:\n",
+      "{\n",
+      "  \"G_args\": {\n",
+      "    \"func_name\": \"training.networks.G_main\",\n",
+      "    \"fmap_base\": 16384,\n",
+      "    \"fmap_max\": 512,\n",
+      "    \"mapping_layers\": 2,\n",
+      "    \"num_fp16_res\": 4,\n",
+      "    \"conv_clamp\": 256\n",
+      "  },\n",
+      "  \"D_args\": {\n",
+      "    \"func_name\": \"training.networks.D_main\",\n",
+      "    \"mbstd_group_size\": 4,\n",
+      "    \"fmap_base\": 16384,\n",
+      "    \"fmap_max\": 512,\n",
+      "    \"num_fp16_res\": 4,\n",
+      "    \"conv_clamp\": 256\n",
+      "  },\n",
+      "  \"G_opt_args\": {\n",
+      "    \"beta1\": 0.0,\n",
+      "    \"beta2\": 0.99,\n",
+      "    \"learning_rate\": 0.0025\n",
+      "  },\n",
+      "  \"D_opt_args\": {\n",
+      "    \"beta1\": 0.0,\n",
+      "    \"beta2\": 0.99,\n",
+      "    \"learning_rate\": 0.0025\n",
+      "  },\n",
+      "  \"loss_args\": {\n",
+      "    \"func_name\": \"training.loss.stylegan2\",\n",
+      "    \"r1_gamma\": 1.6384\n",
+      "  },\n",
+      "  \"augment_args\": {\n",
+      "    \"class_name\": \"training.augment.AdaptiveAugment\",\n",
+      "    \"tune_heuristic\": \"rt\",\n",
+      "    \"tune_target\": 0.6,\n",
+      "    \"apply_func\": \"training.augment.augment_pipeline\",\n",
+      "    \"apply_args\": {\n",
+      "      \"xflip\": 1,\n",
+      "      \"rotate90\": 1,\n",
+      "      \"xint\": 1,\n",
+      "      \"scale\": 1,\n",
+      "      \"rotate\": 1,\n",
+      "      \"aniso\": 1,\n",
+      "      \"xfrac\": 1,\n",
+      "      \"brightness\": 1,\n",
+      "      \"contrast\": 1,\n",
+      "      \"lumaflip\": 1,\n",
+      "      \"hue\": 1,\n",
+      "      \"saturation\": 1\n",
+      "    }\n",
+      "  },\n",
+      "  \"num_gpus\": 4,\n",
+      "  \"image_snapshot_ticks\": 50,\n",
+      "  \"network_snapshot_ticks\": 50,\n",
+      "  \"train_dataset_args\": {\n",
+      "    \"path\": \"./datasets/mona-lisa\",\n",
+      "    \"max_label_size\": 0,\n",
+      "    \"use_raw\": false,\n",
+      "    \"resolution\": 512,\n",
+      "    \"mirror_augment\": false,\n",
+      "    \"mirror_augment_v\": false\n",
+      "  },\n",
+      "  \"metric_arg_list\": [\n",
+      "    {\n",
+      "      \"name\": \"fid50k_full\",\n",
+      "      \"class_name\": \"metrics.frechet_inception_distance.FID\",\n",
+      "      \"max_reals\": null,\n",
+      "      \"num_fakes\": 50000,\n",
+      "      \"minibatch_per_gpu\": 8,\n",
+      "      \"force_dataset_args\": {\n",
+      "        \"shuffle\": false,\n",
+      "        \"max_images\": null,\n",
+      "        \"repeat\": false,\n",
+      "        \"mirror_augment\": false\n",
+      "      }\n",
+      "    }\n",
+      "  ],\n",
+      "  \"metric_dataset_args\": {\n",
+      "    \"path\": \"./datasets/mona-lisa\",\n",
+      "    \"max_label_size\": 0,\n",
+      "    \"use_raw\": false,\n",
+      "    \"resolution\": 512,\n",
+      "    \"mirror_augment\": false,\n",
+      "    \"mirror_augment_v\": false\n",
+      "  },\n",
+      "  \"total_kimg\": 10,\n",
+      "  \"minibatch_size\": 32,\n",
+      "  \"minibatch_gpu\": 8,\n",
+      "  \"G_smoothing_kimg\": 10.0,\n",
+      "  \"G_smoothing_rampup\": 0.05,\n",
+      "  \"run_dir\": \"./training-runs/00000-mona-lisa-res512-auto4-kimg10\"\n",
+      "}\n",
+      "\n",
+      "Output directory:  ./training-runs/00000-mona-lisa-res512-auto4-kimg10\n",
+      "Training data:     ./datasets/mona-lisa\n",
+      "Training length:   10 kimg\n",
+      "Resolution:        512\n",
+      "Number of GPUs:    4\n",
+      "\n",
+      "Creating output directory...\n",
+      "Loading training set...\n",
+      "Image shape: [3, 512, 512]\n",
+      "Label shape: [0]\n",
+      "\n",
+      "Constructing networks...\n",
+      "Setting up TensorFlow plugin \"fused_bias_act.cu\": Loading... Done.\n",
+      "Setting up TensorFlow plugin \"upfirdn_2d.cu\": Loading... Done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset_dir = os.path.join(\"./datasets\", dataset_name)\n",
+    "\n",
+    "if use_ada and use_tsne:\n",
+    "    !python dataset_tool.py create_from_images {dataset_dir} {save_dir}\n",
+    "    !python train.py --outdir=./training-runs --gpus=4 --res={resolution} --data={dataset_dir} --kimg={knum}\n",
+    "elif use_ada:\n",
+    "    !python dataset_tool.py create_from_images {dataset_dir} {save_dir}\n",
+    "    !python train.py --outdir=./training-runs --gpus=4 --res={resolution} --data={dataset_dir} --kimg={knum}\n",
+    "else:\n",
+    "    print(\"ADA is not in use\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
