--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,16 +27,20 @@
     "\n",
     "\n",
     "# Crop Settings\n",
-    "# Choose center, or resize\n",
-    "crop_type = 'resize'\n",
+    "# Choose center or no-crop\n",
+    "# TODO: Add random\n",
+    "crop_type = 'no-crop'\n",
     "resolution = 512\n",
+    "\n",
     "\n",
     "# TSNE Settings\n",
     "# Choose number of clusters to make or None for auto clustering\n",
     "num_clusters = None\n",
     "\n",
+    "\n",
     "# ADA Settings\n",
     "knum = 10\n",
+    "\n",
     "\n",
     "# Spacewalk Settings\n",
     "fps = 24\n",
@@ -50,68 +54,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: opencv-python>=3.4.1.15 in /usr/local/lib/python3.7/site-packages (from -r requirements.txt (line 1)) (4.3.0.36)\n",
-      "Requirement already satisfied: numpy>=1.18.1 in /usr/local/lib/python3.7/site-packages (from -r requirements.txt (line 2)) (1.18.5)\n",
-      "Requirement already satisfied: matplotlib>=3.2.0 in /usr/local/lib/python3.7/site-packages (from -r requirements.txt (line 3)) (3.4.2)\n",
-      "Requirement already satisfied: tqdm==4.45.0 in /usr/local/lib/python3.7/site-packages (from -r requirements.txt (line 4)) (4.45.0)\n",
-      "Requirement already satisfied: Pillow==7.0.0 in /usr/local/lib/python3.7/site-packages (from -r requirements.txt (line 5)) (7.0.0)\n",
-      "Requirement already satisfied: scikit-learn==0.22.2.post1 in /usr/local/lib/python3.7/site-packages (from -r requirements.txt (line 6)) (0.22.2.post1)\n",
-      "Requirement already satisfied: scipy==1.4.1 in /usr/local/lib/python3.7/site-packages (from -r requirements.txt (line 7)) (1.4.1)\n",
-      "Requirement already satisfied: torch==1.4.0 in /usr/local/lib/python3.7/site-packages (from -r requirements.txt (line 8)) (1.4.0)\n",
-      "Requirement already satisfied: torchvision==0.5.0 in /usr/local/lib/python3.7/site-packages (from -r requirements.txt (line 9)) (0.5.0)\n",
-      "Requirement already satisfied: gap-stat>=2 in /usr/local/lib/python3.7/site-packages (from -r requirements.txt (line 10)) (2.0.1)\n",
-      "Requirement already satisfied: opensimplex in /usr/local/lib/python3.7/site-packages (from -r requirements.txt (line 12)) (0.3)\n",
-      "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.7/site-packages (from scikit-learn==0.22.2.post1->-r requirements.txt (line 6)) (1.0.1)\n",
-      "Requirement already satisfied: six in /usr/local/lib/python3.7/site-packages (from torchvision==0.5.0->-r requirements.txt (line 9)) (1.15.0)\n",
-      "Requirement already satisfied: pandas in /usr/local/lib/python3.7/site-packages (from gap-stat>=2->-r requirements.txt (line 10)) (1.1.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/site-packages (from matplotlib>=3.2.0->-r requirements.txt (line 3)) (1.3.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/site-packages (from matplotlib>=3.2.0->-r requirements.txt (line 3)) (0.10.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.7/site-packages (from matplotlib>=3.2.0->-r requirements.txt (line 3)) (2.8.1)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in /usr/local/lib/python3.7/site-packages (from matplotlib>=3.2.0->-r requirements.txt (line 3)) (2.4.7)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/site-packages (from pandas->gap-stat>=2->-r requirements.txt (line 10)) (2021.1)\n",
-      "\u001b[33mWARNING: You are using pip version 21.0.1; however, version 21.2.2 is available.\n",
-      "You should consider upgrading via the '/usr/local/bin/python3.7 -m pip install --upgrade pip' command.\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install -r requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /usr/local/lib/python3.7/site-packages/tensorflow_core/__init__.py:1473: The name tf.estimator.inputs is deprecated. Please use tf.compat.v1.estimator.inputs instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import train\n",
-    "from PIL import Image\n",
+    "from PIL import Image, ImageFile, ImageOps\n",
     "import shutil\n",
+    "import math\n",
     "\n",
-    "from PIL import ImageFile\n",
     "ImageFile.LOAD_TRUNCATED_IMAGES = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,22 +101,32 @@
     "    d = (img_height + crop) // 2\n",
     "        \n",
     "    cropped_image = pil_img.crop((a,b,c,d))\n",
-    "    return resize(cropped_image, res)"
+    "    return resize(cropped_image, res)\n",
+    "\n",
+    "def no_crop(pil_img, res):\n",
+    "    color = [0, 0, 0]\n",
+    "    \n",
+    "    img_width, img_height = pil_img.size\n",
+    "    if img_width < img_height:\n",
+    "        top = 0\n",
+    "        bottom = 0\n",
+    "        left =  math.ceil((img_height - img_width) / 2.0)\n",
+    "        right =  math.floor((img_height - img_width) / 2.0)\n",
+    "    else:\n",
+    "        top =  math.ceil((img_height - img_width) / 2.0)\n",
+    "        bottom =  math.floor((img_height - img_width) / 2.0)\n",
+    "        left = 0\n",
+    "        right = 0\n",
+    "    \n",
+    "    border_image = ImageOps.expand(pil_img, border=(left, top, right, bottom), fill='white')\n",
+    "    return resize(border_image, res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "image_dir = './images/'\n",
     "tmp_dir = './tmp/'\n",
@@ -181,8 +158,8 @@
     "        continue\n",
     "    if crop_type == \"center\":\n",
     "        image = crop_center(image, resolution)\n",
-    "    if crop_type == \"resize\":\n",
-    "        image = resize(image, resolution)\n",
+    "    if crop_type == \"no-crop\":\n",
+    "        image = no_crop(image, resolution)\n",
     "        \n",
     "    tmp_path = os.path.join(tmp_dir, filename)\n",
     "    image.save(tmp_path)"
@@ -190,24 +167,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "529\n",
-      "Running the model inference: 100%|████████████████| 9/9 [00:08<00:00,  1.03it/s]\n",
-      "3\n",
-      "12\n",
-      "12\n",
-      "3\n",
-      "13\n",
-      "Building the T-SNE plot: 100%|████████████████| 529/529 [00:05<00:00, 97.01it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if use_tsne:\n",
     "    !python tsne.py --path={tmp_dir}\n",
@@ -224,27 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter a cluster you want to use or Enter to continue:  1\n",
-      "Enter a cluster you want to use or Enter to continue:  2\n",
-      "Enter a cluster you want to use or Enter to continue:  3\n",
-      "Enter a cluster you want to use or Enter to continue:  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if use_tsne:\n",
     "    clusters = []\n",
@@ -257,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,138 +231,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /usr/local/lib/python3.7/site-packages/tensorflow_core/__init__.py:1473: The name tf.estimator.inputs is deprecated. Please use tf.compat.v1.estimator.inputs instead.\n",
-      "\n",
-      "Loading images from \"./tmp/mona-lisa_clusters\"\n",
-      "Creating dataset \"./datasets/mona-lisa\"\n",
-      "Added 114 images.                       \n",
-      "WARNING:tensorflow:From /usr/local/lib/python3.7/site-packages/tensorflow_core/__init__.py:1473: The name tf.estimator.inputs is deprecated. Please use tf.compat.v1.estimator.inputs instead.\n",
-      "\n",
-      "\n",
-      "Training options:\n",
-      "{\n",
-      "  \"G_args\": {\n",
-      "    \"func_name\": \"training.networks.G_main\",\n",
-      "    \"fmap_base\": 16384,\n",
-      "    \"fmap_max\": 512,\n",
-      "    \"mapping_layers\": 2,\n",
-      "    \"num_fp16_res\": 4,\n",
-      "    \"conv_clamp\": 256\n",
-      "  },\n",
-      "  \"D_args\": {\n",
-      "    \"func_name\": \"training.networks.D_main\",\n",
-      "    \"mbstd_group_size\": 4,\n",
-      "    \"fmap_base\": 16384,\n",
-      "    \"fmap_max\": 512,\n",
-      "    \"num_fp16_res\": 4,\n",
-      "    \"conv_clamp\": 256\n",
-      "  },\n",
-      "  \"G_opt_args\": {\n",
-      "    \"beta1\": 0.0,\n",
-      "    \"beta2\": 0.99,\n",
-      "    \"learning_rate\": 0.0025\n",
-      "  },\n",
-      "  \"D_opt_args\": {\n",
-      "    \"beta1\": 0.0,\n",
-      "    \"beta2\": 0.99,\n",
-      "    \"learning_rate\": 0.0025\n",
-      "  },\n",
-      "  \"loss_args\": {\n",
-      "    \"func_name\": \"training.loss.stylegan2\",\n",
-      "    \"r1_gamma\": 1.6384\n",
-      "  },\n",
-      "  \"augment_args\": {\n",
-      "    \"class_name\": \"training.augment.AdaptiveAugment\",\n",
-      "    \"tune_heuristic\": \"rt\",\n",
-      "    \"tune_target\": 0.6,\n",
-      "    \"apply_func\": \"training.augment.augment_pipeline\",\n",
-      "    \"apply_args\": {\n",
-      "      \"xflip\": 1,\n",
-      "      \"rotate90\": 1,\n",
-      "      \"xint\": 1,\n",
-      "      \"scale\": 1,\n",
-      "      \"rotate\": 1,\n",
-      "      \"aniso\": 1,\n",
-      "      \"xfrac\": 1,\n",
-      "      \"brightness\": 1,\n",
-      "      \"contrast\": 1,\n",
-      "      \"lumaflip\": 1,\n",
-      "      \"hue\": 1,\n",
-      "      \"saturation\": 1\n",
-      "    }\n",
-      "  },\n",
-      "  \"num_gpus\": 4,\n",
-      "  \"image_snapshot_ticks\": 50,\n",
-      "  \"network_snapshot_ticks\": 50,\n",
-      "  \"train_dataset_args\": {\n",
-      "    \"path\": \"./datasets/mona-lisa\",\n",
-      "    \"max_label_size\": 0,\n",
-      "    \"use_raw\": false,\n",
-      "    \"resolution\": 512,\n",
-      "    \"mirror_augment\": false,\n",
-      "    \"mirror_augment_v\": false\n",
-      "  },\n",
-      "  \"metric_arg_list\": [\n",
-      "    {\n",
-      "      \"name\": \"fid50k_full\",\n",
-      "      \"class_name\": \"metrics.frechet_inception_distance.FID\",\n",
-      "      \"max_reals\": null,\n",
-      "      \"num_fakes\": 50000,\n",
-      "      \"minibatch_per_gpu\": 8,\n",
-      "      \"force_dataset_args\": {\n",
-      "        \"shuffle\": false,\n",
-      "        \"max_images\": null,\n",
-      "        \"repeat\": false,\n",
-      "        \"mirror_augment\": false\n",
-      "      }\n",
-      "    }\n",
-      "  ],\n",
-      "  \"metric_dataset_args\": {\n",
-      "    \"path\": \"./datasets/mona-lisa\",\n",
-      "    \"max_label_size\": 0,\n",
-      "    \"use_raw\": false,\n",
-      "    \"resolution\": 512,\n",
-      "    \"mirror_augment\": false,\n",
-      "    \"mirror_augment_v\": false\n",
-      "  },\n",
-      "  \"total_kimg\": 10,\n",
-      "  \"minibatch_size\": 32,\n",
-      "  \"minibatch_gpu\": 8,\n",
-      "  \"G_smoothing_kimg\": 10.0,\n",
-      "  \"G_smoothing_rampup\": 0.05,\n",
-      "  \"run_dir\": \"./training-runs/00000-mona-lisa-res512-auto4-kimg10\"\n",
-      "}\n",
-      "\n",
-      "Output directory:  ./training-runs/00000-mona-lisa-res512-auto4-kimg10\n",
-      "Training data:     ./datasets/mona-lisa\n",
-      "Training length:   10 kimg\n",
-      "Resolution:        512\n",
-      "Number of GPUs:    4\n",
-      "\n",
-      "Creating output directory...\n",
-      "Loading training set...\n",
-      "Image shape: [3, 512, 512]\n",
-      "Label shape: [0]\n",
-      "\n",
-      "Constructing networks...\n",
-      "Setting up TensorFlow plugin \"fused_bias_act.cu\": Loading... Done.\n",
-      "Setting up TensorFlow plugin \"upfirdn_2d.cu\": Loading... Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset_dir = os.path.join(\"./datasets\", dataset_name)\n",
     "\n",
     "if use_ada and use_tsne:\n",
-    "    !python dataset_tool.py create_from_images {dataset_dir} {save_dir}\n",
+    "    image_dir = os.path.join(\"./tmp\", str(dataset_name + \"_clusters\"))\n",
+    "    !python dataset_tool.py create_from_images {dataset_dir} {image_dir}\n",
     "    !python train.py --outdir=./training-runs --gpus=4 --res={resolution} --data={dataset_dir} --kimg={knum}\n",
     "elif use_ada:\n",
-    "    !python dataset_tool.py create_from_images {dataset_dir} {save_dir}\n",
+    "    image_dir = os.path.join(\"./tmp\", dataset_name)\n",
+    "    !python dataset_tool.py create_from_images {dataset_dir} {image_dir}\n",
     "    !python train.py --outdir=./training-runs --gpus=4 --res={resolution} --data={dataset_dir} --kimg={knum}\n",
     "else:\n",
     "    print(\"ADA is not in use\")\n",
@@ -441,7 +264,7 @@
   }
  ],
  "metadata": {
-  "instance_type": "ml.p3.8xlarge",
+  "instance_type": "ml.g4dn.xlarge",
   "kernelspec": {
    "display_name": "Python 3 (TensorFlow 1.15 Python 3.7 GPU Optimized)",
    "language": "python",
