Add ability to specify number of GPUs to use

--- a/workflow.ipynb
+++ b/workflow.ipynb
@@ -26,6 +26,7 @@
     "use_tsne = False\n",
     "use_spacewalk = True\n",
     "\n",
+    "gpus = 2\n",
     "\n",
     "# Crop Settings\n",
     "# Choose center or no-crop\n",
@@ -60,28 +61,6 @@
    "outputs": [],
    "source": [
     "!pip install -r requirements.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!sudo cp cuda/include/cudnn*.h /usr/local/cuda-10.0/include\n",
-    "!sudo cp cuda/lib64/libcudnn* /usr/local/cuda-10.0/lib64\n",
-    "!sudo chmod a+r /usr/local/cuda-10.0/include/cudnn*.h /usr/local/cuda-10.0/lib64/libcudnn*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!sudo dpkg -i libcudnn/libcudnn7_7.6.0.64-1+cuda10.0_amd64.deb\n",
-    "!sudo dpkg -i libcudnn/libcudnn7-dev_7.6.0.64-1+cuda10.0_amd64.deb\n",
-    "!sudo dpkg -i libcudnn/libcudnn7-doc_7.6.0.64-1+cuda10.0_amd64.deb"
    ]
   },
   {
@@ -228,26 +207,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "dataset_dir = os.path.join(\"./datasets\", dataset_name)\n",
     "\n",
     "if use_ada and use_tsne:\n",
     "    image_dir = os.path.join(\"./tmp\", str(dataset_name + \"_clusters\"))\n",
     "    !python dataset_tool.py create_from_images {dataset_dir} {image_dir}\n",
-    "    !python train.py --outdir=./training-runs --gpus=4 --res={resolution} --data={dataset_dir} --kimg={knum}\n",
+    "    !python train.py --outdir=./training-runs --gpus={gpus} --res={resolution} --data={dataset_dir} --kimg={knum}\n",
     "elif use_ada:\n",
     "    image_dir = os.path.join(\"./tmp\", dataset_name)\n",
     "    !python dataset_tool.py create_from_images {dataset_dir} {image_dir}\n",
-    "    !python train.py --outdir=./training-runs --gpus=4 --res={resolution} --data={dataset_dir} --kimg={knum}\n",
+    "    !python train.py --outdir=./training-runs --gpus={gpus} --res={resolution} --data={dataset_dir} --kimg={knum}\n",
     "else:\n",
     "    print(\"ADA is not in use\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
